--- a/parameters.cfg
+++ b/parameters.cfg
@@ -25,5 +25,5 @@ weblogo_format = "png"
 [Tree]
 generate_tree = False
 tree_type = "NJ"
-bootstrap_replications = "250"
+bootstrap_replications = 250
 
