--- a/parameters.cfg
+++ b/parameters.cfg
@@ -20,7 +20,7 @@ align_seqs = False
 
 [Weblogo]
 generate_logo = False
-weblogo_format = "png"
+weblogo_format = png
 
 [Tree]
 generate_tree = False
