--- a/parameters.cfg
+++ b/parameters.cfg
@@ -15,6 +15,9 @@ smart_clustering_ = False
 min_number_of_clusters_to_cluster_again = 250
 max_number_of_clusters_to_cluster_again = 700
 
+[Pfam domains]
+check_pfam_domains = False
+
 [Alignment]
 align_seqs = False
 
