--- a/parameters.cfg
+++ b/parameters.cfg
@@ -1,7 +1,7 @@
 [Blast]
 hitlist_range = 5000
 blast_database = "refseq_protein"
-smart_blast_ = False
+pro_blast_ = False
 max_low_identity_seqs = 1
 min_low_identity_seqs = 1
 expected_min_identity = 0.25
@@ -11,7 +11,7 @@ remove_gaps = True
 [Clustering]
 cluster_seqs = False
 similarity = 0.5
-smart_clustering_ = False
+pro_clustering_ = False
 min_number_of_clusters_to_cluster_again = 250
 max_number_of_clusters_to_cluster_again = 700
 
