Change 'hitlist_range' to 'hitlist_size'

--- a/ProLink/parameters.cfg
+++ b/ProLink/parameters.cfg
@@ -1,5 +1,5 @@
 [Blast]
-hitlist_range = 5000
+hitlist_size = 5000
 blast_database = "refseq_protein"
 pro_blast_ = False
 max_low_identity_seqs = 1
