Add option to run BLAST locally

--- a/ProLink/parameters.cfg
+++ b/ProLink/parameters.cfg
@@ -1,6 +1,7 @@
 [Blast]
 hitlist_size = 5000
 blast_database = "refseq_protein"
+blast_local = False
 pro_blast_ = False
 max_low_identity_seqs = 1
 min_low_identity_seqs = 1
