Pin ClipKIT version to 1.*

--- a/prolink_env.yaml
+++ b/prolink_env.yaml
@@ -13,7 +13,7 @@ dependencies:
   - requests
   - biopython
   - bioconda::muscle=5
-  - bioconda::clipkit
+  - bioconda::clipkit=1
   - bioconda::weblogo
   - ghostscript
 
