--- a/prolink_env.yaml
+++ b/prolink_env.yaml
@@ -12,8 +12,9 @@ dependencies:
   - pyyaml
   - requests
   - biopython
+  - bioconda::mmseqs2=14
   - bioconda::muscle=5
-  - bioconda::clipkit=1
+  - bioconda::clipkit
   - bioconda::weblogo
   - ghostscript
 
@@ -24,7 +25,6 @@ dependencies:
   - python-igraph
   - leidenalg
   - bioconda::mash=2
-  - bioconda::mmseqs2=14
 
   # ProLink
   - pip:
