--- a/prolink_env.yaml
+++ b/prolink_env.yaml
@@ -14,7 +14,7 @@ dependencies:
   - biopython
   - bioconda::mmseqs2=14
   - bioconda::muscle=5
-  - bioconda::clipkit
+  - bioconda::clipkit<2
   - bioconda::weblogo
   - ghostscript
 
